[gd_scene load_steps=2 format=3 uid="uid://bf76pyorby581"]

[ext_resource type="Script" uid="uid://i03xak0aqf4u" path="res://addons/claude_3.5_sonnet_chat_api/dock_window.gd" id="1_aaayo"]

[node name="Claude API" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aaayo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Input" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Enter your message for Claude..."
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Send to Claude"

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Output" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HTTPRequest" type="HTTPRequest" parent="VBoxContainer"]
unique_name_in_owner = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_clear_pressed"]
[connection signal="request_completed" from="VBoxContainer/HTTPRequest" to="." method="_on_request_completed"]
